big updates to design, small content additions.

--- a/_posts/.Ulysses-Group.plist
+++ b/_posts/.Ulysses-Group.plist
@@ -10,6 +10,9 @@
 			<string>2016-03-19-parapet-for-the-pauper.md</string>
 		</array>
 		<array>
+			<string>2016-04-01-on-the-inadequecy-of-free-knowledge.md</string>
+		</array>
+		<array>
 			<string>2016-03-19-three-conditions-for-a-definition-of-science.md</string>
 		</array>
 	</array>
