added coming soon page

--- a/_posts/.Ulysses-Group.plist
+++ b/_posts/.Ulysses-Group.plist
@@ -15,6 +15,9 @@
 		<array>
 			<string>2016-03-19-three-conditions-for-a-definition-of-science.md</string>
 		</array>
+		<array>
+			<string>2016-04-01-update.md</string>
+		</array>
 	</array>
 </dict>
 </plist>
