Design Overhaul. New Posts

--- a/_posts/.Ulysses-Group.plist
+++ b/_posts/.Ulysses-Group.plist
@@ -16,7 +16,19 @@
 			<string>2016-03-19-three-conditions-for-a-definition-of-science.md</string>
 		</array>
 		<array>
+			<string>2016-05-05-form-and-counterform.md</string>
+		</array>
+		<array>
 			<string>2016-04-01-update.md</string>
+		</array>
+		<array>
+			<string>2016-03-26-kenya-hara-white-note.md</string>
+		</array>
+		<array>
+			<string>2016-05-26-Cinders.md</string>
+		</array>
+		<array>
+			<string>2016-05-26-the-bluff.md</string>
 		</array>
 	</array>
 </dict>
