--- a/_posts/.Ulysses-Group.plist
+++ b/_posts/.Ulysses-Group.plist
@@ -13,6 +13,12 @@
 			<string>2016-04-01-on-the-inadequecy-of-free-knowledge.md</string>
 		</array>
 		<array>
+			<string>2016-08-16-imitating-beckett.md</string>
+		</array>
+		<array>
+			<string>2016-08-17-built-from-the-outside-carpenter's-gotheric-and-american-disillusionment.md</string>
+		</array>
+		<array>
 			<string>2016-03-19-three-conditions-for-a-definition-of-science.md</string>
 		</array>
 		<array>
