new note. Change to note page styles. Modified essay sig

--- a/_posts/.Ulysses-Group.plist
+++ b/_posts/.Ulysses-Group.plist
@@ -13,6 +13,9 @@
 			<string>2016-04-01-on-the-inadequecy-of-free-knowledge.md</string>
 		</array>
 		<array>
+			<string>2016-11-16 Man and Emergence.md</string>
+		</array>
+		<array>
 			<string>2016-08-16-imitating-beckett.md</string>
 		</array>
 		<array>
@@ -35,6 +38,9 @@
 		</array>
 		<array>
 			<string>2016-05-26-the-bluff.md</string>
+		</array>
+		<array>
+			<string>2016-11-14-nyrb-critique-series-i-i.md</string>
 		</array>
 	</array>
 </dict>
