Changed up site layout

--- a/_posts/.Ulysses-Group.plist
+++ b/_posts/.Ulysses-Group.plist
@@ -42,6 +42,21 @@
 		<array>
 			<string>2016-11-14-nyrb-critique-series-i-i.md</string>
 		</array>
+		<array>
+			<string>2016-11-16-man-and-emergence.md</string>
+		</array>
+		<array>
+			<string>2016-11-17-meditative-writing.md</string>
+		</array>
+		<array>
+			<string>2016-11-18-im-gaddis-im-beckett.md</string>
+		</array>
+		<array>
+			<string>2016-11-19-taking-notes.md</string>
+		</array>
+		<array>
+			<string>2016-11-21-when-do-we-reach-philosophy.md</string>
+		</array>
 	</array>
 </dict>
 </plist>
